[package]
name = "g935"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
hidapi = "2.6.1"
anyhow = "1.0.56"
log = "0.4.16"
simplelog = "0.12.2"
crossbeam-channel = "0.5.4"
clap = { version = "3.2.25", features = ["derive"] }
